Bug 692120 - Text antialiasing breaks at large point sizes
Summary: Text antialiasing breaks at large point sizes
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Text (show other bugs)
Version: master
Hardware: PC All
: P2 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-04 18:08 UTC by Marcos H. Woehrmann
Modified: 2012-04-12 17:13 UTC (History)
1 user (show)

See Also:
Customer: 200
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2011-04-04 18:08:23 UTC
The customer reports:

We have been using the ghostscript jpeg device to generate JPEG’s from postscript. In the transition from version 8.64 to 9.0 the quality of large text sizes have diminished – as the anti-aliasing automatically turns off at some pixel size of the characters.
 
The attached postscript file illustrates the problem.
 
The attached jpeg’s were generated by ghostscript using the options:
-dSAFER -dBATCH -dNOPAUSE -dEPSCrop -sDEVICE=jpeg -dJPEGQ=100 -dGraphicsAlphaBits=4 -dTextAlphaBits=4 -r132.0
Comment 2 Marcos H. Woehrmann 2011-04-04 18:10:10 UTC
Ken took a look at this and reports:

With -dDisableFAPI=true the text is always anti-aliased regardless of point size. With FAPI enabled the text is anti-aliased up to a point (~84.6975), presumably where the glyphs grow so large we stop caching them, and from then on is not anti-aliased.

I'm not sure why not caching should cause the problem, but it does seem to be FAPI related.

While we will want to fix the problem, you could suggest using -dDisableFAPI=true as a temporary work-around.
Comment 3 Chris Liddell (chrisl) 2011-04-05 15:04:14 UTC
fixed in r12369.


The patch can be seen here (it is fairly simple):
http://www.ghostscript.com/pipermail/gs-cvs/2011-April/012645.html