The FAPI code was relying on the result of gx_compute_text_oversampling() to ascertain whether anti-aliasing is in force.

This is insufficient, as it turns out, and we actually need to base the
decision on the alpha bits as requested by the device.

No cluster differences expected.

Bug 692120.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12369 a1074d23-0009-0410-80fe-cf8c14f379e6